# $Id: CHANGELOG,v 1.3 2003/12/03 05:37:02 jaco Exp $

* Tue, Dec 02, 2003, 0.2.0-cvs
  + Jaco Greeff <jaco@linuxminicd.org>:
    [livecd-install]:
      - Total revamp using perl-Qt
      - Initial release/announcement
      
* Fri, Nov 21, 2003, 0.1.0-cvs
  + Jaco Greeff <jaco@linuxminicd.org>:
    [livecd-install]:
      - Initial version
